--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,11 +1,30 @@
 .main {
+    position: relative;
     border-radius: 10px;
     padding: 10px 40px;
-    background: url("../../assets/images/background.png") no-repeat fixed center;
-    background-size: cover;
+    background-image: url("../../assets/images/background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
     overflow: hidden;
+    transition: background 0.6s ease;
 }
 
-.main-aside-open {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../../assets/images/background.png");
+.main:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    background: transparent;
+
+    transition: background 0.4s ease;
+}
+
+.main_blackout {
+    background-size: 110% 110%;
+}
+
+.main_blackout:before {
+    background: rgba(0, 0, 0, 0.4);
 }
