--- a/src/layouts/AsideBar.module.css
+++ b/src/layouts/AsideBar.module.css
@@ -5,13 +5,7 @@
 .aside__trigger {
     width: 80px;
     height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    border-radius: 80px;
-    background: #D9D000;
-    box-shadow: 0 0 20px 0 rgba(217, 208, 0, 0.60);
+    border-radius: 50%;
 }
 
 .aside__trigger-icon {
@@ -65,13 +59,19 @@
     color: #FFF;
     font-size: 28px;
     font-weight: 500;
-    line-height: 1.4;
+    line-height: 1.2;
     letter-spacing: -0.02em;
-    margin-bottom: 5px;
+    padding: 5px 0;
+    opacity: .8;
+    transition: opacity 0.2s ease;
 }
 
-.aside__navbar-link:last-child {
-    margin-bottom: 0;
+.aside__navbar-link:hover {
+    opacity: 1;
+}
+
+.aside__navbar-ling_active {
+    opacity: 1;
 }
 
 .aside__version {
