--- a/src/pages/Settings.module.css
+++ b/src/pages/Settings.module.css
@@ -4,6 +4,22 @@
 }
 
 .settings__header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.settings__header-label {
+    color: #B6B6BF;
+    font-size: 13px;
+    margin-bottom: 10px;
+}
+
+.settings__header-select {
+    background: none;
+    border: none;
+    font-size: 16px;
+    color: #FFF;
 
 }
 
@@ -24,12 +40,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: -5px -20px;
+    margin: -5px -10px;
+    padding-bottom: 40px;
 }
 
 .settings__input {
-    width: calc(50% - 40px);
-    margin: 5px 20px;
+    width: calc(50% - 20px);
+    margin: 5px 10px;
 }
 
 .settings__fs {
