--- a/src/pages/Settings.module.css
+++ b/src/pages/Settings.module.css
@@ -61,6 +61,32 @@
     margin: 5px 10px;
 }
 
+.settings__input-select {
+    background: #101014;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 16px 24px;
+    border-radius: 10px;
+    border: 1px solid #3C3C41;
+
+}
+
+.settings__input-select-label {
+    color: #B6B6BF;
+    font-size: 13px;
+    margin-right: 20px;
+    opacity: 0.4;
+}
+
+.settings__input-select-field {
+    background: none;
+    appearance: none;
+    border: none;
+    color: #FFFFFF;
+    opacity: 0.6;
+}
+
 .settings__fs {
     width: calc(100% - 40px);
     padding-top: 5px;
