--- a/src/pages/Settings.module.css
+++ b/src/pages/Settings.module.css
@@ -15,24 +15,59 @@
     margin-bottom: 10px;
 }
 
-.settings__header-select {
+.settings__select {
     border: none;
-    font-size: 16px;
-    color: #FFF;
-    appearance: none;
-
     position: relative;
-    padding: 0 45px 0 0;
-
-    background-color: transparent;
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 14 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13 0.800049L7 6.80005L1 0.80005' stroke='white' stroke-width='1.5'/%3E%3C/svg%3E%0A");
-    background-position: right 10px center;
-    background-repeat: no-repeat;
-    background-size: 14px 8px;
 }
 
-.settings__header-select option {
+.settings__select-toggle {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    cursor: pointer;
+    padding: 10px;
+    margin: -10px;
+}
 
+.settings__select-toggle-lable {
+    color: #FFF;
+    font-size: 16px;
+}
+
+.settings__select-toggle-icon {
+    width: 18px;
+    height: 18px;
+    stroke: #FFFFFF;
+    margin-left: 10px;
+    transition: transform 0.4s ease;
+}
+
+.settings__select_active .settings__select-toggle-icon {
+    transform: rotate(180deg);
+}
+
+.settings__select-dropdown {
+    top: 100%;
+    left: 0;
+    position: absolute;
+    padding-top: 10px;
+    width: 280px;
+    visibility: hidden;
+    opacity: 0;
+    transform: translate3d(0, 20px, 0);
+    z-index: 100;
+    transition: transform 0.4s ease, opacity 0.2s ease, visibility 0.4s ease;
+    will-change: transform, opacity, visibility;
+}
+
+.settings__select_active .settings__select-dropdown {
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+    opacity: 1;
+}
+
+.settings__select-dropdown-menu {
+    width: 100%;
 }
 
 .settings__checkboxes {
